<resources>
    <string name="app_name">a-rithist</string>
    <string name="welcome">Welcome to a-rithist!\nWhat do you want to practice?</string>
    <string name="title_activity_lesson_options">LessonOptionsActivity</string>
    <string name="optionsMessage">Options</string>
    <string name="vocabTitle">Vocabulary list:</string>
    <string name="vocab_list_size_title">Number of words (max %d):</string>
    <string name="vocab_list_size_prompt">Num</string>
    <string name="largest_number_title">Largest number to translate (max %d):</string>
    <string name="largest_number_prompt">Num</string>
    <string name="translationTitle">Translation direction:</string>
    <string name="gd_en">Gaelic to English</string>
    <string name="en_gd">English to Gaelic</string>
    <string name="gd_dg">Gaelic to Digits</string>
    <string name="dg_gd">Digits to Gaelic</string>
    <string name="from_gd">Translate from Gaelic </string>
    <string name="from_en">Translate from English</string>
    <string name="responseTypeTitle">Response type:</string>
    <string name="response_full">Translate full sentence</string>
    <string name="response_blanks">Fill in the blanks</string>
    <string name="response_blanks_verb">Fill in the verb</string>
    <string name="response_blanks_pp">Fill in the prepositional pronoun</string>
    <string name="response_qa">Answer questions</string>
    <string name="gender_mode">Gender of nouns using…</string>
    <string name="adj">Adjectives</string>
    <string name="def_art_nom">Definite Articles (nom.)</string>
    <string name="which">Practice which?</string>
    <string name="comp">Comparatives</string>
    <string name="sup">Superlatives</string>
    <string name="verb_tense_title">Which tense(s)?</string>
    <string name="past">Past tense</string>
    <string name="present">Present tense</string>
    <string name="future">Future tense</string>
    <string name="verb_form_title">What type of sentence?</string>
    <string name="pos_state">Positive statements</string>
    <string name="neg_state">Negative statements</string>
    <string name="pos_q">Positive questions</string>
    <string name="neg_q">Negative questions</string>
    <string name="obj_prep">What should be the object for the prepositions?</string>
    <string name="pronouns">Prepositional pronouns</string>
    <string name="nouns">Prepositions with names, professions, etc</string>
    <string name="check_accents_title">Check accents?</string>
    <string name="check_accents_switch_text_yes">Yes</string>
    <string name="check_accents_switch_text_no">No</string>
    <string name="submit_options">Start lesson</string>
    <string name="answer">Answer</string>
    <string name="submit_solution">Check</string>
    <string name="next_exercise">Next</string>
    <string name="incorrect">Incorrect! The correct answer is: </string>
</resources>