<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/backgroundDarkTheme"
            android:orientation="vertical"
            android:textColor="@color/textDarkTheme">


            <!-- header -->
            <TextView
                android:id="@+id/lesson_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:textAlignment="center"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/options_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/optionsMessage"
                android:textAlignment="center"
                android:textSize="16sp" />

            <!-- vocabulary -->
            <View
                android:id="@+id/vocab_divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray" />

            <TextView
                android:id="@+id/vocab_list_spinner_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/vocabTitle"
                android:textAlignment="textStart"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/vocab_list_spinner"
                android:layout_width="409dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/vocab_list_size_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="textStart"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/vocab_list_size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="3"
                    android:hint="num"
                    android:inputType="number" />
            </LinearLayout>

            <!-- translation direction -->
            <View
                android:id="@+id/translation_divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray" />

            <TextView
                android:id="@+id/translation_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/translationTitle"
                android:textAlignment="textStart"
                android:textSize="16sp" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/translation_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/en_gd" />

            <!-- sentence options -->
            <View
                android:id="@+id/sentence_divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray" />

            <TextView
                android:id="@+id/sentence_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sentenceTitle"
                android:textAlignment="textStart"
                android:textSize="16sp" />

            <RadioGroup
                android:id="@+id/sentence_options"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">

                <RadioButton
                    android:id="@+id/full_sentence"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/sentence_full" />

                <RadioButton
                    android:id="@+id/fill_in_blanks"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sentence_blanks" />

                <RadioButton
                    android:id="@+id/q_and_a"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sentence_qa" />
            </RadioGroup>

            <!-- gender options -->
            <View
                android:id="@+id/gender_divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray" />

            <TextView
                android:id="@+id/gender_mode_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender_mode"
                android:textAlignment="textStart"
                android:textSize="16sp" />

            <RadioGroup
                android:id="@+id/gender_mode_options"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">

                <RadioButton
                    android:id="@+id/gender_adj"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/adj" />

                <RadioButton
                    android:id="@+id/gender_def_art"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/def_art" />
            </RadioGroup>

            <!-- comparatives/superlatives options -->
            <View
                android:id="@+id/comp_sup_divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray" />

            <TextView
                android:id="@+id/comp_sup_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/which"
                android:textAlignment="textStart"
                android:textSize="16sp" />

            <CheckBox
                android:id="@+id/comparatives"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/comp" />

            <CheckBox
                android:id="@+id/superlatives"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/sup" />

            <!-- verb options -->
            <View
                android:id="@+id/verb_tense_divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray" />

            <TextView
                android:id="@+id/verb_tense_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/verb_tense_title"
                android:textAlignment="textStart"
                android:textSize="16sp" />

            <CheckBox
                android:id="@+id/present"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/present" />

            <CheckBox
                android:id="@+id/past"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/past" />

            <CheckBox
                android:id="@+id/future"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/future" />

            <!-- Sentence type -->
            <View
                android:id="@+id/verb_form_divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray" />

            <TextView
                android:id="@+id/verb_form_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/verb_form_title"
                android:textAlignment="textStart"
                android:textSize="16sp" />

            <CheckBox
                android:id="@+id/positive_statements"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/pos_state" />

            <CheckBox
                android:id="@+id/negative_statements"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/neg_state" />

            <CheckBox
                android:id="@+id/positive_questions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/pos_q" />

            <CheckBox
                android:id="@+id/negative_questions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/neg_q" />

            <!-- Object of preposition -->
            <View
                android:id="@+id/obj_prep_divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray" />

            <TextView
                android:id="@+id/obj_prep"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/obj_prep"
                android:textAlignment="textStart"
                android:textSize="16sp" />

            <CheckBox
                android:id="@+id/pronouns"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/pronouns" />

            <CheckBox
                android:id="@+id/nouns"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/nouns" />

            <!-- check accents -->
            <View
                android:id="@+id/check_accents_divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray" />

            <TextView
                android:id="@+id/check_accents_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/check_accents_title"
                android:textAlignment="textStart"
                android:textSize="16sp" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/check_accents_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/check_accents_switch_text_yes" />


            <!-- submit options and go to lesson -->

            <Button
                android:id="@+id/submit_options"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="submitOptions"
                android:text="@string/submit_options" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
